Rename "Show FPS" to "Show Performance Stats"

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -357,10 +357,10 @@
     <string name="emulation_load_state">Load State</string>
     <string name="emulation_empty_state_slot">Slot %1$d</string>
     <string name="emulation_occupied_state_slot">Slot %1$d - %2$tF %2$tR</string>
-    <string name="emulation_show_fps">Show FPS</string>
+    <string name="emulation_show_perf_overlay">Show Performance Stats</string>
         <!-- FPS Overlay settings -->
-    <string name="fps_overlay_options">FPS Overlay</string>
-    <string name="fps_overlay_options_description">Configure what information is shown in the performance overlay</string>
+    <string name="stats_overlay_options">Stats Overlay</string>
+    <string name="stats_overlay_options_description">Configure what information is shown in the performance stats overlay</string>
     <string name="show_fps">Show FPS</string>
     <string name="show_fps_description">Display current frames per second</string>
     <string name="show_speed">Show Speed</string>
