Add option to have a semi transparent background for the ovelay
Should help peopel who have are using central positioning of the overlay and single screen layouts

--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -382,6 +382,8 @@
     <string name="overlay_position_bottom_right">Bottom Right</string>
     <string name="overlay_position_center_top">Center Top</string>
     <string name="overlay_position_center_bottom">Center Bottom</string>
+    <string name="overlay_background">Overlay Background</string>
+    <string name="overlay_background_description">Adds a bakcgorund behind the ovelry for easier reading</string>
 
     <string name="emulation_haptic_feedback">Haptic Feedback</string>
     <string name="emulation_overlay_options">Overlay Options</string>
