--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="select_lime3ds_user_folder_home_description">Changes the files that Lime3DS uses to load games</string>
     <string name="theme_and_color_description">Modify the look of the app</string>
     <string name="install_cia_title">Install CIA</string>
+    <string name="favorite">Favorite</string>
+    <string name="favorite_description">Mark this game as a favorite</string>
 
     <!-- GPU driver installation -->
     <string name="select_gpu_driver">Select GPU driver</string>
