--- a/src/android/app/src/main/res/values/strings.xml
+++ b/src/android/app/src/main/res/values/strings.xml
@@ -103,6 +103,9 @@
     <string name="search_recently_played">Recently Played</string>
     <string name="search_recently_added">Recently Added</string>
     <string name="search_installed">Installed</string>
+    <string name="view_list">Default</string>
+    <string name="view_grid">Grid</string>
+
 
     <!-- Input related strings -->
     <string name="controller_circlepad">Circle Pad</string>
